Wed Feb 24 00:40:58 2010  Akinori MUSHA  <knu@iDaemons.org>

	* parse.y: Revert r26609, r26160, r25658 and r24695.  The loose
	  args patch caused a lot of problem and we just could not fix
	  them all in a timely manner.

Fri Feb 19 12:15:21 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/readline/readline.c (Init_readline): initialize
	  check rl_catch_signals and rl_catch_sigwinch.
	  [ruby-core:28238] [ruby-core:28242]

	* ext/readline/extconf.rb: check rl_catch_signals and
	  rl_catch_sigwinch.

Fri Feb 19 00:23:24 2010  Tanaka Akira  <akr@fsij.org>

	* pack.c (pack_unpack): call PACK_ITEM_ADJUST for 'Q'.

Tue Feb 16 20:56:39 2010  Tanaka Akira  <akr@fsij.org>

	* file.c (rb_group_member): renamed from group_member.
	  don't use group_member() in glibc because it's not valgrind clean.
	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=570047

Thu Feb 11 20:43:00 2010  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_modenum_mode): return "r" for O_RDONLY|O_APPEND.
	  [ruby-dev:40379]

Thu Feb 11 09:49:31 2010  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: fix [ruby-core:28144] reported by Hans de Graaff.
	  (Resolv::DNS#make_requester): pass nameserver_port to
	  UnconnectedUDP.new.
	  (Resolv::DNS.bind_random_port): change the is_ipv6 argument to
	  bind_host.
	  (Resolv::DNS::Requester#initialize): change instance variable to
	  store multiple sockets.
	  (Resolv::DNS::Requester#request): pass readable sockets to
	  recv_reply.
	  (Resolv::DNS::Requester#close): close all sockets.
	  (Resolv::DNS::Requester::UnconnectedUDP#initialize): allocate
	  a socket for each address family of name servers.
	  (Resolv::DNS::Requester::UnconnectedUDP#recv_reply): read from the
	  passwd readable socket.
	  (Resolv::DNS::Requester::UnconnectedUDP#sender): use appropriate
	  socket for the target nameserver.
	  (Resolv::DNS::Requester::ConnectedUDP): follow the instance variable
	  change.
	  (Resolv::DNS::Requester::TCP#sender): ditto.