@@ -1,3 +1,9 @@
+Wed Feb 24 22:39:15 2010  Tanaka Akira  <akr@fsij.org>
+
+	* lib/resolv.rb: fix [ruby-core:28320] reported by Paul Clegg.
+	  (Resolv::DNS::Requester#request): raise ResolvTimeout consistently
+	  for timeout.
+
 Wed Feb 24 00:40:58 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* parse.y: Revert r26609, r26160, r25658 and r24695.  The loose
